Pr4/k8s/servicio-notificaciones.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicio-notificaciones
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicio-notificaciones
  template:
    metadata:
      labels:
        app: servicio-notificaciones
    spec:
      containers:
        - name: servicio-notificaciones
          image: servicio-notificaciones:v1
          imagePullPolicy: Never
