Pr4/k8s/broker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
        - name: broker
          image: broker:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 5555
---
apiVersion: v1
kind: Service
metadata:
  name: broker
spec:
  type: ClusterIP
  selector:
    app: broker
  ports:
    - port: 5555
      targetPort: 5555
