Pr4/k8s/servicio-inventario.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicio-inventario
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicio-inventario
  template:
    metadata:
      labels:
        app: servicio-inventario
    spec:
      containers:
        - name: servicio-inventario
          image: servicio-inventario:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: servicio-inventario
spec:
  type: ClusterIP
  selector:
    app: servicio-inventario
  ports:
    - port: 8002
      targetPort: 8002
