Pr4/k8s/servicio-pedidos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicio-pedidos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: servicio-pedidos
  template:
    metadata:
      labels:
        app: servicio-pedidos
    spec:
      containers:
        - name: servicio-pedidos
          image: servicio-pedidos:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: servicio-pedidos
spec:
  type: ClusterIP
  selector:
    app: servicio-pedidos
  ports:
    - port: 8001
      targetPort: 8001
