Pr4/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-principal
spec:
  rules:
    - host: tienda.local
      http:
        paths:
          - path: /compra
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
